# 3DINO

./: .gitignore  pyproject.toml
dinov2/configs/: __init__.py
